--- a/package.json
+++ b/package.json
@@ -73,9 +73,11 @@
     "@gamestdio/websocket": "^0.3.2",
     "@github/webauthn-json": "^0.5.7",
     "@rails/ujs": "^6.1.5",
+    "@sentry/react": "^6.19.2",
+    "@sentry/tracing": "^6.19.2",
     "array-includes": "^3.1.4",
-    "atrament": "0.2.4",
     "arrow-key-navigation": "^1.2.0",
+    "atrament": "0.2.4",
     "autoprefixer": "^9.8.8",
     "axios": "^0.26.1",
     "babel-loader": "^8.2.3",
